add link to github

--- a/index.html
+++ b/index.html
@@ -463,5 +463,8 @@
         </section>
       </main>
     </div>
+    <footer>
+      <p><a href="" target="_blank">Open source code</a> by Nataliia Kozlitina</p>
+  </footer>
   </body>
 </html>
