--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </main>
     </div>
     <footer>
-      <p><a href="" target="_blank">Open source code</a> by Nataliia Kozlitina</p>
+      <p><a href="https://github.com/KozlitinaNatalia/technical_documentation_page" target="_blank">Open source code</a> by Nataliia Kozlitina</p>
   </footer>
   </body>
 </html>
